# cpw-calc

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README.md  cpw-calcConfig.h.in  cpw_calcConfig.h.in
.github/workflows/: c-cpp.yml
include/: calc.h  cpw-calc.h  windowMain.h
share/: org.cpwonline.calc.desktop
src/: CMakeLists.txt  calc.cpp  cpw-calc.cpp  main.cc  windowMain.cc  windowMain.cpp
